--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #1E293B;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +35,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+html{
+  background-color: #1E293B;
 }
